finally spacing problem solved

--- a/css.css
+++ b/css.css
@@ -66,16 +66,14 @@ margin-right: 30px;
 
   margin: 10;
   padding: 10;
-  margin-top: 20;
+  margin-top: 80;
   margin-left: 0;
   margin-right: 0;
 }
-
 h1{
   width:10;
- margin-top: 20;
+  margin-top: 20;
   margin: 50px auto 0 auto;
-
   font-family: 'Sacramento', cursive;
   font-size:590%;
   color:  #000;
@@ -150,6 +148,7 @@ hr{
 }
 .bottom-container{
   background-color: #fff;
+
  color:#fff;
  position: fixed;
  bottom: 0;
